# deckard-rs

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: README.md  cli.rs  config.rs  lib.rs  main.rs  operations.rs
tests/: config_tests.rs  integration_tests.rs
