[package]
name = "deckard-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
uuid = { version = "1.4", features = ["v4"] }
anyhow = "1.0"
lipbalm = "0.1"

[dev-dependencies]
postgres = "0.19"

[lib]
name = "deckard_rs"
path = "src/lib.rs"

[[bin]]
name = "deckard"
path = "src/main.rs"
